<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="cz.tmap.converterApp.fragmentsAndActivities.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <TextView
            android:id="@+id/calc_expression"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ellipsize="start"
            android:paddingStart="5dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/main_color"
            android:textSize="35sp" />
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="135dp">

        <TextView
            android:id="@+id/calc_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:ellipsize="end"
            android:paddingStart="5dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="485dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_open_parenthesis_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Key_open_parenthesis"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_close_parenthesis_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_close_parenthesis"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_remove_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="0sp"
                android:visibility="visible"
                app:icon="@drawable/backspace_fill0_wght400_grad0_opsz48"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="40dp" />


            <Button
                android:id="@+id/button_division_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_division"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_seven_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_7"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_eight_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_8"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_nine_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_9"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_multiplication_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_multiplication"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_four_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_4"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_five_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_six_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_6"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_minus_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_minus"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_one_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_two_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_three_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_3"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_plus_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_plus"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_clear_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_ac"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_zero_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_0"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_dot_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Key_dot"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_equals_calc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_equals"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>