<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:windowSoftInputMode="stateHidden">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="25dp"
            app:backgroundTint="@color/black"
            app:icon="@drawable/arrow_back_fill0_wght400_grad0_opsz48"
            app:iconGravity="textStart" />

        <TextView
            android:id="@+id/desc_of_convert_no_negative"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center|start|center_horizontal|center_vertical"
            android:paddingStart="125dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/unit_from"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text=""
            android:textColor="@color/white"
            app:iconTint="@color/background_gray" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_from_layout"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_from"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:inputType="text"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/unit_to"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text=""
            android:textColor="@color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_to_layout"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_to"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:inputType="text"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <Button
        android:id="@+id/button_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/convert"
        android:textColor="@color/white"
        app:iconTint="@color/background_gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_seven_len"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/key_7"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/button_four_len"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/key_4"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_one_len"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/key_1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_plus_minus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:text="@string/plus_minus"
                android:textSize="24sp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_eight_len"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/key_8"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_five_len"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/key_5"
                android:textColorLink="#673AB7"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_two_len"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/key_2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_zero_len"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/key_0"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_nine_len"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_9"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_six_len"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_6"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_three_len"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_3"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_dot_len"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Key_dot"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_clear_len"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_ac"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_remove_len"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColorLink="#673AB7"
                android:textSize="20sp"
                app:icon="@drawable/backspace_fill0_wght400_grad0_opsz48"
                app:iconGravity="textEnd"
                app:iconTint="@color/purple_500" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
